Version 3.9.6
- Added try/catch and LEN to BASIC
- Added anonymous functions and closures to BASIC
- Clean up properly after \ is used without an abort happening
- abort now exits if there is no \ to catch it
- Fixed a bug where methods were incorrectly marked as used

Version 3.9.5
- Fixed stack allocation when HUB bss is removed (-O2 option)
- Implemented global variables
- Updated BASIC I/O functions

Version 3.9.4
- Report errors for use of private methods
- Fixed an optimizer bug that could cause the compiler to crash
- Fixed output of repeated strings of non-zero bytes in the DAT
  section
- Many improvements to BASIC

Version 3.9.3
- Allow backquote (`) to quote special characters in Spin identifiers
- Fixed handling of '(expr)[N]' in PASM blocks
- Fixed lookup of files which have extensions different from .spin
- Fixed an overlooked check for dead registers in optimization
- Added garbage collection and string handling to BASIC.

Version 3.9.2
- Error messages are now formatted as:
    filename.spin(#) error: xxxx
  which is more like openspin and matches FreeBASIC
- Made -l option work properly with DAT output
- Fixed a regression in Spin object pointers
- Fixed operator precedence of the boolean "NOT" operator in Spin
- Fixed an over-agressive optimization
- Added +< and similar unsigned comparison operators to Spin
- Implemented floating point for BASIC, plus many other BASIC
  improvements

Version 3.9.1
- Fixed some bugs in common subexpression elimination
- Fixed conditional instructions in inline assembly
- Improved loop strength reduction optimizations
- Added missing popa instruction for P2, also missing rd/wr address mode
- Added +/ and +// unsigned division operators to Spin
- Started work on BASIC support. This is not complete yet (it won't be
  until 4.0.0).
  
Version 3.8.7
- Improved constant propagation for REP instructions
- Fixed addresses for listing in P1 mode
- Fixed an optimization problem where hw registers could be used